apps/home-automation/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 26
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2024.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
              name: web
          volumeMounts:
            - mountPath: /config
              name: home-assistant-data
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: home-assistant-config
            - name: home-assistant-tls
              mountPath: /etc/tls
              readOnly: true
          securityContext:
            privileged: false
      restartPolicy: Always
      volumes:
        - name: home-assistant-tls
          secret:
            secretName: home-assistant-tls
        - name: home-assistant-data
          persistentVolumeClaim:
            claimName: pvc-home-assistant-config
        - name: home-assistant-config
          configMap:
            name: home-assistant-config
            items:
              - key: configuration.yaml
                path: configuration.yaml
