apps/home-automation/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - name: web
      targetPort: web
      port: 443
      protocol: TCP
  type: ClusterIP
