apps/home-automation/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 4546b
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: home-assistant
  namespace: home-automation
spec:
  rules:
    - host: home-assistant.united
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: web 
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - home-assistant.united
      secretName: home-assistant.united-tls
